fixed formatting on mobile version

--- a/mkarbowski/src/app/home-page/components/about-page/about-page.component.css
+++ b/mkarbowski/src/app/home-page/components/about-page/about-page.component.css
@@ -49,6 +49,10 @@
     flex-direction: column;
   }
 
+  .p-about {
+    margin-left: 0px;
+  }
+
   p {
     margin-left: 0px;
     margin-top: 0px;
